Customize send_password_token and check_password_token resolvers. Clean up code.

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,14 +4,15 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to the Habit Tracker YOUbit, <%= @user.name %></h1>
     <p>
-      You have successfully signed up,
-      your username is: <%= @user.email %>.<br>
+      <%=t('.welcome_msg')%> <%= @user.name %>
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      <%=t('.successful_sign_up_msg')%> <%= @user.email %>.<br>
     </p>
-    <p>Thanks for joining and have a great day!</p>
+    <p>
+      <%=t('.login_url_msg')%> <%= @url %>.
+    </p>
+    <p><%=t('.thank_you_msg')%></p>
   </body>
 </html>
